frontend/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     program -> program function
Rule 3     program -> program declaration Semi
Rule 4     program -> empty
Rule 5     type -> Int
Rule 6     function -> function_def
Rule 7     function -> function_decl
Rule 8     function_def -> type Identifier LParen parameter_list RParen LBrace block RBrace
Rule 9     function_decl -> type Identifier LParen parameter_list RParen Semi
Rule 10    parameter_list -> parameter_list Comma type_identifier_union
Rule 11    parameter_list -> type_identifier_union
Rule 12    type_identifier_union -> type
Rule 13    type_identifier_union -> type Identifier
Rule 14    parameter_list -> empty
Rule 15    block -> block block_item
Rule 16    block -> empty
Rule 17    block_item -> statement
Rule 18    block_item -> declaration Semi
Rule 19    statement -> statement_matched
Rule 20    statement -> statement_unmatched
Rule 21    statement_matched -> If LParen expression RParen statement_matched Else statement_matched
Rule 22    statement_unmatched -> If LParen expression RParen statement_matched Else statement_unmatched
Rule 23    statement_unmatched -> If LParen expression RParen statement
Rule 24    statement_matched -> While LParen expression RParen statement_matched
Rule 25    statement_unmatched -> While LParen expression RParen statement_unmatched
Rule 26    statement_matched -> Do statement_matched While LParen expression RParen Semi
Rule 27    statement_unmatched -> Do statement_unmatched While LParen expression RParen Semi
Rule 28    statement_matched -> For LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_matched
Rule 29    statement_matched -> For LParen declaration Semi opt_expression Semi opt_expression RParen statement_matched
Rule 30    statement_unmatched -> For LParen opt_expression Semi opt_expression Semi opt_expression RParen statement_unmatched
Rule 31    statement_unmatched -> For LParen declaration Semi opt_expression Semi opt_expression Semi opt_expression RParen statement_unmatched
Rule 32    statement_matched -> Return expression Semi
Rule 33    statement_matched -> opt_expression Semi
Rule 34    statement_matched -> LBrace block RBrace
Rule 35    statement_matched -> Break Semi
Rule 36    statement_matched -> Continue Semi
Rule 37    opt_expression -> expression
Rule 38    opt_expression -> empty
Rule 39    declaration -> type Identifier
Rule 40    declaration -> type Identifier Assign expression
Rule 41    expression -> assignment
Rule 42    assignment -> conditional
Rule 43    conditional -> logical_or
Rule 44    logical_or -> logical_and
Rule 45    logical_and -> bit_or
Rule 46    bit_or -> xor
Rule 47    xor -> bit_and
Rule 48    bit_and -> equality
Rule 49    equality -> relational
Rule 50    relational -> additive
Rule 51    additive -> multiplicative
Rule 52    multiplicative -> unary
Rule 53    unary -> postfix
Rule 54    postfix -> primary
Rule 55    unary -> Minus unary
Rule 56    unary -> BitNot unary
Rule 57    unary -> Not unary
Rule 58    postfix -> Identifier LParen expression_list RParen
Rule 59    expression_list -> expression_list Comma expression
Rule 60    expression_list -> expression
Rule 61    expression_list -> empty
Rule 62    assignment -> Identifier Assign expression
Rule 63    logical_or -> logical_or Or logical_and
Rule 64    logical_and -> logical_and And bit_or
Rule 65    bit_or -> bit_or BitOr xor
Rule 66    xor -> xor Xor bit_and
Rule 67    bit_and -> bit_and BitAnd equality
Rule 68    equality -> equality NotEqual relational
Rule 69    equality -> equality Equal relational
Rule 70    relational -> relational Less additive
Rule 71    relational -> relational Greater additive
Rule 72    relational -> relational LessEqual additive
Rule 73    relational -> relational GreaterEqual additive
Rule 74    additive -> additive Plus multiplicative
Rule 75    additive -> additive Minus multiplicative
Rule 76    multiplicative -> multiplicative Mul unary
Rule 77    multiplicative -> multiplicative Div unary
Rule 78    multiplicative -> multiplicative Mod unary
Rule 79    conditional -> logical_or Question expression Colon conditional
Rule 80    primary -> Integer
Rule 81    primary -> Identifier
Rule 82    primary -> LParen expression RParen

Terminals, with rules where they appear

And                  : 64
Assign               : 40 62
BitAnd               : 67
BitNot               : 56
BitOr                : 65
Break                : 35
Colon                : 79
Comma                : 10 59
Continue             : 36
Div                  : 77
Do                   : 26 27
Else                 : 21 22
Equal                : 69
For                  : 28 29 30 31
Greater              : 71
GreaterEqual         : 73
Identifier           : 8 9 13 39 40 58 62 81
If                   : 21 22 23
Int                  : 5
Integer              : 80
LBrace               : 8 34
LParen               : 8 9 21 22 23 24 25 26 27 28 29 30 31 58 82
Less                 : 70
LessEqual            : 72
Minus                : 55 75
Mod                  : 78
Mul                  : 76
Not                  : 57
NotEqual             : 68
Or                   : 63
Plus                 : 74
Question             : 79
RBrace               : 8 34
RParen               : 8 9 21 22 23 24 25 26 27 28 29 30 31 58 82
Return               : 32
Semi                 : 3 9 18 26 27 28 28 29 29 30 30 31 31 31 32 33 35 36
While                : 24 25 26 27
Xor                  : 66
error                : 

Nonterminals, with rules where they appear

additive             : 50 70 71 72 73 74 75
assignment           : 41
bit_and              : 47 66 67
bit_or               : 45 64 65
block                : 8 15 34
block_item           : 15
conditional          : 42 79
declaration          : 3 18 29 31
empty                : 4 14 16 38 61
equality             : 48 67 68 69
expression           : 21 22 23 24 25 26 27 32 37 40 59 60 62 79 82
expression_list      : 58 59
function             : 2
function_decl        : 7
function_def         : 6
logical_and          : 44 63 64
logical_or           : 43 63 79
multiplicative       : 51 74 75 76 77 78
opt_expression       : 28 28 28 29 29 30 30 30 31 31 31 33
parameter_list       : 8 9 10
postfix              : 53
primary              : 54
program              : 2 3 0
relational           : 49 68 69 70 71 72 73
statement            : 17 23
statement_matched    : 19 21 21 22 24 26 28 29
statement_unmatched  : 20 22 25 27 30 31
type                 : 8 9 12 13 39 40
type_identifier_union : 10 11
unary                : 52 55 56 57 76 77 78
xor                  : 46 65 66

Parsing method: LALR

state 0

    (0) S' -> . program
    (2) program -> . program function
    (3) program -> . program declaration Semi
    (4) program -> . empty
    (1) empty -> .

    Int             reduce using rule 1 (empty -> .)
    $end            reduce using rule 1 (empty -> .)

    program                        shift and go to state 1
    empty                          shift and go to state 2

state 1

    (0) S' -> program .
    (2) program -> program . function
    (3) program -> program . declaration Semi
    (6) function -> . function_def
    (7) function -> . function_decl
    (39) declaration -> . type Identifier
    (40) declaration -> . type Identifier Assign expression
    (8) function_def -> . type Identifier LParen parameter_list RParen LBrace block RBrace
    (9) function_decl -> . type Identifier LParen parameter_list RParen Semi
    (5) type -> . Int

    Int             shift and go to state 8

    function                       shift and go to state 3
    declaration                    shift and go to state 4
    function_def                   shift and go to state 5
    function_decl                  shift and go to state 6
    type                           shift and go to state 7

state 2

    (4) program -> empty .

    Int             reduce using rule 4 (program -> empty .)
    $end            reduce using rule 4 (program -> empty .)


state 3

    (2) program -> program function .

    Int             reduce using rule 2 (program -> program function .)
    $end            reduce using rule 2 (program -> program function .)


state 4

    (3) program -> program declaration . Semi

    Semi            shift and go to state 9


state 5

    (6) function -> function_def .

    Int             reduce using rule 6 (function -> function_def .)
    $end            reduce using rule 6 (function -> function_def .)


state 6

    (7) function -> function_decl .

    Int             reduce using rule 7 (function -> function_decl .)
    $end            reduce using rule 7 (function -> function_decl .)


state 7

    (39) declaration -> type . Identifier
    (40) declaration -> type . Identifier Assign expression
    (8) function_def -> type . Identifier LParen parameter_list RParen LBrace block RBrace
    (9) function_decl -> type . Identifier LParen parameter_list RParen Semi

    Identifier      shift and go to state 10


state 8

    (5) type -> Int .

    Identifier      reduce using rule 5 (type -> Int .)
    RParen          reduce using rule 5 (type -> Int .)
    Comma           reduce using rule 5 (type -> Int .)


state 9

    (3) program -> program declaration Semi .

    Int             reduce using rule 3 (program -> program declaration Semi .)
    $end            reduce using rule 3 (program -> program declaration Semi .)


state 10

    (39) declaration -> type Identifier .
    (40) declaration -> type Identifier . Assign expression
    (8) function_def -> type Identifier . LParen parameter_list RParen LBrace block RBrace
    (9) function_decl -> type Identifier . LParen parameter_list RParen Semi

    Semi            reduce using rule 39 (declaration -> type Identifier .)
    Assign          shift and go to state 11
    LParen          shift and go to state 12


state 11

    (40) declaration -> type Identifier Assign . expression
    (41) expression -> . assignment
    (42) assignment -> . conditional
    (62) assignment -> . Identifier Assign expression
    (43) conditional -> . logical_or
    (79) conditional -> . logical_or Question expression Colon conditional
    (44) logical_or -> . logical_and
    (63) logical_or -> . logical_or Or logical_and
    (45) logical_and -> . bit_or
    (64) logical_and -> . logical_and And bit_or
    (46) bit_or -> . xor
    (65) bit_or -> . bit_or BitOr xor
    (47) xor -> . bit_and
    (66) xor -> . xor Xor bit_and
    (48) bit_and -> . equality
    (67) bit_and -> . bit_and BitAnd equality
    (49) equality -> . relational
    (68) equality -> . equality NotEqual relational
    (69) equality -> . equality Equal relational
    (50) relational -> . additive
    (70) relational -> . relational Less additive
    (71) relational -> . relational Greater additive
    (72) relational -> . relational LessEqual additive
    (73) relational -> . relational GreaterEqual additive
    (51) additive -> . multiplicative
    (74) additive -> . additive Plus multiplicative
    (75) additive -> . additive Minus multiplicative
    (52) multiplicative -> . unary
    (76) multiplicative -> . multiplicative Mul unary
    (77) multiplicative -> . multiplicative Div unary
    (78) multiplicative -> . multiplicative Mod unary
    (53) unary -> . postfix
    (55) unary -> . Minus unary
    (56) unary -> . BitNot unary
    (57) unary -> . Not unary
    (54) postfix -> . primary
    (58) postfix -> . Identifier LParen expression_list RParen
    (80) primary -> . Integer
    (81) primary -> . Identifier
    (82) primary -> . LParen expression RParen

    Identifier      shift and go to state 13
    Minus           shift and go to state 26
    BitNot          shift and go to state 29
    Not             shift and go to state 30
    Integer         shift and go to state 33
    LParen          shift and go to state 32

    expression                     shift and go to state 14
    assignment                     shift and go to state 15
    conditional                    shift and go to state 16
    logical_or                     shift and go to state 17
    logical_and                    shift and go to state 18
    bit_or                         shift and go to state 19
    xor                            shift and go to state 20
    bit_and                        shift and go to state 21
    equality                       shift and go to state 22
    relational                     shift and go to state 23
    additive                       shift and go to state 24
    multiplicative                 shift and go to state 25
    unary                          shift and go to state 27
    postfix                        shift and go to state 28
    primary                        shift and go to state 31

state 12

    (8) function_def -> type Identifier LParen . parameter_list RParen LBrace block RBrace
    (9) function_decl -> type Identifier LParen . parameter_list RParen Semi
    (10) parameter_list -> . parameter_list Comma type_identifier_union
    (11) parameter_list -> . type_identifier_union
    (14) parameter_list -> . empty
    (12) type_identifier_union -> . type
    (13) type_identifier_union -> . type Identifier
    (1) empty -> .
    (5) type -> . Int

    RParen          reduce using rule 1 (empty -> .)
    Comma           reduce using rule 1 (empty -> .)
    Int             shift and go to state 8

    type                           shift and go to state 34
    parameter_list                 shift and go to state 35
    type_identifier_union          shift and go to state 36
    empty                          shift and go to state 37

state 13

    (62) assignment -> Identifier . Assign expression
    (58) postfix -> Identifier . LParen expression_list RParen
    (81) primary -> Identifier .

    Assign          shift and go to state 38
    LParen          shift and go to state 39
    Mul             reduce using rule 81 (primary -> Identifier .)
    Div             reduce using rule 81 (primary -> Identifier .)
    Mod             reduce using rule 81 (primary -> Identifier .)
    Plus            reduce using rule 81 (primary -> Identifier .)
    Minus           reduce using rule 81 (primary -> Identifier .)
    Less            reduce using rule 81 (primary -> Identifier .)
    Greater         reduce using rule 81 (primary -> Identifier .)
    LessEqual       reduce using rule 81 (primary -> Identifier .)
    GreaterEqual    reduce using rule 81 (primary -> Identifier .)
    NotEqual        reduce using rule 81 (primary -> Identifier .)
    Equal           reduce using rule 81 (primary -> Identifier .)
    BitAnd          reduce using rule 81 (primary -> Identifier .)
    Xor             reduce using rule 81 (primary -> Identifier .)
    BitOr           reduce using rule 81 (primary -> Identifier .)
    And             reduce using rule 81 (primary -> Identifier .)
    Question        reduce using rule 81 (primary -> Identifier .)
    Or              reduce using rule 81 (primary -> Identifier .)
    Semi            reduce using rule 81 (primary -> Identifier .)
    RParen          reduce using rule 81 (primary -> Identifier .)
    Comma           reduce using rule 81 (primary -> Identifier .)
    Colon           reduce using rule 81 (primary -> Identifier .)


state 14

    (40) declaration -> type Identifier Assign expression .

    Semi            reduce using rule 40 (declaration -> type Identifier Assign expression .)


state 15

    (41) expression -> assignment .

    Semi            reduce using rule 41 (expression -> assignment .)
    RParen          reduce using rule 41 (expression -> assignment .)
    Comma           reduce using rule 41 (expression -> assignment .)
    Colon           reduce using rule 41 (expression -> assignment .)


state 16

    (42) assignment -> conditional .

    Semi            reduce using rule 42 (assignment -> conditional .)
    RParen          reduce using rule 42 (assignment -> conditional .)
    Comma           reduce using rule 42 (assignment -> conditional .)
    Colon           reduce using rule 42 (assignment -> conditional .)


state 17

    (43) conditional -> logical_or .
    (79) conditional -> logical_or . Question expression Colon conditional
    (63) logical_or -> logical_or . Or logical_and

    Semi            reduce using rule 43 (conditional -> logical_or .)
    RParen          reduce using rule 43 (conditional -> logical_or .)
    Comma           reduce using rule 43 (conditional -> logical_or .)
    Colon           reduce using rule 43 (conditional -> logical_or .)
    Question        shift and go to state 40
    Or              shift and go to state 41


state 18

    (44) logical_or -> logical_and .
    (64) logical_and -> logical_and . And bit_or

    Question        reduce using rule 44 (logical_or -> logical_and .)
    Or              reduce using rule 44 (logical_or -> logical_and .)
    Semi            reduce using rule 44 (logical_or -> logical_and .)
    RParen          reduce using rule 44 (logical_or -> logical_and .)
    Comma           reduce using rule 44 (logical_or -> logical_and .)
    Colon           reduce using rule 44 (logical_or -> logical_and .)
    And             shift and go to state 42


state 19

    (45) logical_and -> bit_or .
    (65) bit_or -> bit_or . BitOr xor

    And             reduce using rule 45 (logical_and -> bit_or .)
    Question        reduce using rule 45 (logical_and -> bit_or .)
    Or              reduce using rule 45 (logical_and -> bit_or .)
    Semi            reduce using rule 45 (logical_and -> bit_or .)
    RParen          reduce using rule 45 (logical_and -> bit_or .)
    Comma           reduce using rule 45 (logical_and -> bit_or .)
    Colon           reduce using rule 45 (logical_and -> bit_or .)
    BitOr           shift and go to state 43


state 20

    (46) bit_or -> xor .
    (66) xor -> xor . Xor bit_and

    BitOr           reduce using rule 46 (bit_or -> xor .)
    And             reduce using rule 46 (bit_or -> xor .)
    Question        reduce using rule 46 (bit_or -> xor .)
    Or              reduce using rule 46 (bit_or -> xor .)
    Semi            reduce using rule 46 (bit_or -> xor .)
    RParen          reduce using rule 46 (bit_or -> xor .)
    Comma           reduce using rule 46 (bit_or -> xor .)
    Colon           reduce using rule 46 (bit_or -> xor .)
    Xor             shift and go to state 44


state 21

    (47) xor -> bit_and .
    (67) bit_and -> bit_and . BitAnd equality

    Xor             reduce using rule 47 (xor -> bit_and .)
    BitOr           reduce using rule 47 (xor -> bit_and .)
    And             reduce using rule 47 (xor -> bit_and .)
    Question        reduce using rule 47 (xor -> bit_and .)
    Or              reduce using rule 47 (xor -> bit_and .)
    Semi            reduce using rule 47 (xor -> bit_and .)
    RParen          reduce using rule 47 (xor -> bit_and .)
    Comma           reduce using rule 47 (xor -> bit_and .)
    Colon           reduce using rule 47 (xor -> bit_and .)
    BitAnd          shift and go to state 45


state 22

    (48) bit_and -> equality .
    (68) equality -> equality . NotEqual relational
    (69) equality -> equality . Equal relational

    BitAnd          reduce using rule 48 (bit_and -> equality .)
    Xor             reduce using rule 48 (bit_and -> equality .)
    BitOr           reduce using rule 48 (bit_and -> equality .)
    And             reduce using rule 48 (bit_and -> equality .)
    Question        reduce using rule 48 (bit_and -> equality .)
    Or              reduce using rule 48 (bit_and -> equality .)
    Semi            reduce using rule 48 (bit_and -> equality .)
    RParen          reduce using rule 48 (bit_and -> equality .)
    Comma           reduce using rule 48 (bit_and -> equality .)
    Colon           reduce using rule 48 (bit_and -> equality .)
    NotEqual        shift and go to state 46
    Equal           shift and go to state 47


state 23

    (49) equality -> relational .
    (70) relational -> relational . Less additive
    (71) relational -> relational . Greater additive
    (72) relational -> relational . LessEqual additive
    (73) relational -> relational . GreaterEqual additive

    NotEqual        reduce using rule 49 (equality -> relational .)
    Equal           reduce using rule 49 (equality -> relational .)
    BitAnd          reduce using rule 49 (equality -> relational .)
    Xor             reduce using rule 49 (equality -> relational .)
    BitOr           reduce using rule 49 (equality -> relational .)
    And             reduce using rule 49 (equality -> relational .)
    Question        reduce using rule 49 (equality -> relational .)
    Or              reduce using rule 49 (equality -> relational .)
    Semi            reduce using rule 49 (equality -> relational .)
    RParen          reduce using rule 49 (equality -> relational .)
    Comma           reduce using rule 49 (equality -> relational .)
    Colon           reduce using rule 49 (equality -> relational .)
    Less            shift and go to state 48
    Greater         shift and go to state 49
    LessEqual       shift and go to state 50
    GreaterEqual    shift and go to state 51


state 24

    (50) relational -> additive .
    (74) additive -> additive . Plus multiplicative
    (75) additive -> additive . Minus multiplicative

    Less            reduce using rule 50 (relational -> additive .)
    Greater         reduce using rule 50 (relational -> additive .)
    LessEqual       reduce using rule 50 (relational -> additive .)
    GreaterEqual    reduce using rule 50 (relational -> additive .)
    NotEqual        reduce using rule 50 (relational -> additive .)
    Equal           reduce using rule 50 (relational -> additive .)
    BitAnd          reduce using rule 50 (relational -> additive .)
    Xor             reduce using rule 50 (relational -> additive .)
    BitOr           reduce using rule 50 (relational -> additive .)
    And             reduce using rule 50 (relational -> additive .)
    Question        reduce using rule 50 (relational -> additive .)
    Or              reduce using rule 50 (relational -> additive .)
    Semi            reduce using rule 50 (relational -> additive .)
    RParen          reduce using rule 50 (relational -> additive .)
    Comma           reduce using rule 50 (relational -> additive .)
    Colon           reduce using rule 50 (relational -> additive .)
    Plus            shift and go to state 52
    Minus           shift and go to state 53


state 25

    (51) additive -> multiplicative .
    (76) multiplicative -> multiplicative . Mul unary
    (77) multiplicative -> multiplicative . Div unary
    (78) multiplicative -> multiplicative . Mod unary

    Plus            reduce using rule 51 (additive -> multiplicative .)
    Minus           reduce using rule 51 (additive -> multiplicative .)
    Less            reduce using rule 51 (additive -> multiplicative .)
    Greater         reduce using rule 51 (additive -> multiplicative .)
    LessEqual       reduce using rule 51 (additive -> multiplicative .)
    GreaterEqual    reduce using rule 51 (additive -> multiplicative .)
    NotEqual        reduce using rule 51 (additive -> multiplicative .)
    Equal           reduce using rule 51 (additive -> multiplicative .)
    BitAnd          reduce using rule 51 (additive -> multiplicative .)
    Xor             reduce using rule 51 (additive -> multiplicative .)
    BitOr           reduce using rule 51 (additive -> multiplicative .)
    And             reduce using rule 51 (additive -> multiplicative .)
    Question        reduce using rule 51 (additive -> multiplicative .)
    Or              reduce using rule 51 (additive -> multiplicative .)
    Semi            reduce using rule 51 (additive -> multiplicative .)
    RParen          reduce using rule 51 (additive -> multiplicative .)
    Comma           reduce using rule 51 (additive -> multiplicative .)
    Colon           reduce using rule 51 (additive -> multiplicative .)
    Mul             shift and go to state 54
    Div             shift and go to state 55
    Mod             shift and go to state 56


state 26

    (55) unary -> Minus . unary
    (53) unary -> . postfix
    (55) unary -> . Minus unary
    (56) unary -> . BitNot unary
    (57) unary -> . Not unary
    (54) postfix -> . primary
    (58) postfix -> . Identifier LParen expression_list RParen
    (80) primary -> . Integer
    (81) primary -> . Identifier
    (82) primary -> . LParen expression RParen

    Minus           shift and go to state 26
    BitNot          shift and go to state 29
    Not             shift and go to state 30
    Identifier      shift and go to state 58
    Integer         shift and go to state 33
    LParen          shift and go to state 32

    unary                          shift and go to state 57
    postfix                        shift and go to state 28
    primary                        shift and go to state 31

state 27

    (52) multiplicative -> unary .

    Mul             reduce using rule 52 (multiplicative -> unary .)
    Div             reduce using rule 52 (multiplicative -> unary .)
    Mod             reduce using rule 52 (multiplicative -> unary .)
    Plus            reduce using rule 52 (multiplicative -> unary .)
    Minus           reduce using rule 52 (multiplicative -> unary .)
    Less            reduce using rule 52 (multiplicative -> unary .)
    Greater         reduce using rule 52 (multiplicative -> unary .)
    LessEqual       reduce using rule 52 (multiplicative -> unary .)
    GreaterEqual    reduce using rule 52 (multiplicative -> unary .)
    NotEqual        reduce using rule 52 (multiplicative -> unary .)
    Equal           reduce using rule 52 (multiplicative -> unary .)
    BitAnd          reduce using rule 52 (multiplicative -> unary .)
    Xor             reduce using rule 52 (multiplicative -> unary .)
    BitOr           reduce using rule 52 (multiplicative -> unary .)
    And             reduce using rule 52 (multiplicative -> unary .)
    Question        reduce using rule 52 (multiplicative -> unary .)
    Or              reduce using rule 52 (multiplicative -> unary .)
    Semi            reduce using rule 52 (multiplicative -> unary .)
    RParen          reduce using rule 52 (multiplicative -> unary .)
    Comma           reduce using rule 52 (multiplicative -> unary .)
    Colon           reduce using rule 52 (multiplicative -> unary .)


state 28

    (53) unary -> postfix .

    Mul             reduce using rule 53 (unary -> postfix .)
    Div             reduce using rule 53 (unary -> postfix .)
    Mod             reduce using rule 53 (unary -> postfix .)
    Plus            reduce using rule 53 (unary -> postfix .)
    Minus           reduce using rule 53 (unary -> postfix .)
    Less            reduce using rule 53 (unary -> postfix .)
    Greater         reduce using rule 53 (unary -> postfix .)
    LessEqual       reduce using rule 53 (unary -> postfix .)
    GreaterEqual    reduce using rule 53 (unary -> postfix .)
    NotEqual        reduce using rule 53 (unary -> postfix .)
    Equal           reduce using rule 53 (unary -> postfix .)
    BitAnd          reduce using rule 53 (unary -> postfix .)
    Xor             reduce using rule 53 (unary -> postfix .)
    BitOr           reduce using rule 53 (unary -> postfix .)
    And             reduce using rule 53 (unary -> postfix .)
    Question        reduce using rule 53 (unary -> postfix .)
    Or              reduce using rule 53 (unary -> postfix .)
    Semi            reduce using rule 53 (unary -> postfix .)
    RParen          reduce using rule 53 (unary -> postfix .)
    Comma           reduce using rule 53 (unary -> postfix .)
    Colon           reduce using rule 53 (unary -> postfix .)


state 29

    (56) unary -> BitNot . unary
    (53) unary -> . postfix
    (55) unary -> . Minus unary
    (56) unary -> . BitNot unary
    (57) unary -> . Not unary
    (54) postfix -> . primary
    (58) postfix -> . Identifier LParen expression_list RParen
    (80) primary -> . Integer
    (81) primary -> . Identifier
    (82) primary -> . LParen expression RParen

    Minus           shift and go to state 26
    BitNot          shift and go to state 29
    Not             shift and go to state 30
    Identifier      shift and go to state 58
    Integer         shift and go to state 33
    LParen          shift and go to state 32

    unary                          shift and go to state 59
    postfix                        shift and go to state 28
    primary                        shift and go to state 31

state 30

    (57) unary -> Not . unary
    (53) unary -> . postfix
    (55) unary -> . Minus unary
    (56) unary -> . BitNot unary
    (57) unary -> . Not unary
    (54) postfix -> . primary
    (58) postfix -> . Identifier LParen expression_list RParen
    (80) primary -> . Integer
    (81) primary -> . Identifier
    (82) primary -> . LParen expression RParen

    Minus           shift and go to state 26
    BitNot          shift and go to state 29
    Not             shift and go to state 30
    Identifier      shift and go to state 58
    Integer         shift and go to state 33
    LParen          shift and go to state 32

    unary                          shift and go to state 60
    postfix                        shift and go to state 28
    primary                        shift and go to state 31

state 31

    (54) postfix -> primary .

    Mul             reduce using rule 54 (postfix -> primary .)
    Div             reduce using rule 54 (postfix -> primary .)
    Mod             reduce using rule 54 (postfix -> primary .)
    Plus            reduce using rule 54 (postfix -> primary .)
    Minus           reduce using rule 54 (postfix -> primary .)
    Less            reduce using rule 54 (postfix -> primary .)
    Greater         reduce using rule 54 (postfix -> primary .)
    LessEqual       reduce using rule 54 (postfix -> primary .)
    GreaterEqual    reduce using rule 54 (postfix -> primary .)
    NotEqual        reduce using rule 54 (postfix -> primary .)
    Equal           reduce using rule 54 (postfix -> primary .)
    BitAnd          reduce using rule 54 (postfix -> primary .)
    Xor             reduce using rule 54 (postfix -> primary .)
    BitOr           reduce using rule 54 (postfix -> primary .)
    And             reduce using rule 54 (postfix -> primary .)
    Question        reduce using rule 54 (postfix -> primary .)
    Or              reduce using rule 54 (postfix -> primary .)
    Semi            reduce using rule 54 (postfix -> primary .)
    RParen          reduce using rule 54 (postfix -> primary .)
    Comma           reduce using rule 54 (postfix -> primary .)
    Colon           reduce using rule 54 (postfix -> primary .)


state 32

    (82) primary -> LParen . expression RParen
    (41) expression -> . assignment
    (42) assignment -> . conditional
    (62) assignment -> . Identifier Assign expression
    (43) conditional -> . logical_or
    (79) conditional -> . logical_or Question expression Colon conditional
    (44) logical_or -> . logical_and
    (63) logical_or -> . logical_or Or logical_and
    (45) logical_and -> . bit_or
    (64) logical_and -> . logical_and And bit_or
    (46) bit_or -> . xor
    (65) bit_or -> . bit_or BitOr xor
    (47) xor -> . bit_and
    (66) xor -> . xor Xor bit_and
    (48) bit_and -> . equality
    (67) bit_and -> . bit_and BitAnd equality
    (49) equality -> . relational
    (68) equality -> . equality NotEqual relational
    (69) equality -> . equality Equal relational
    (50) relational -> . additive
    (70) relational -> . relational Less additive
    (71) relational -> . relational Greater additive
    (72) relational -> . relational LessEqual additive
    (73) relational -> . relational GreaterEqual additive
    (51) additive -> . multiplicative
    (74) additive -> . additive Plus multiplicative
    (75) additive -> . additive Minus multiplicative
    (52) multiplicative -> . unary
    (76) multiplicative -> . multiplicative Mul unary
    (77) multiplicative -> . multiplicative Div unary
    (78) multiplicative -> . multiplicative Mod unary
    (53) unary -> . postfix
    (55) unary -> . Minus unary
    (56) unary -> . BitNot unary
    (57) unary -> . Not unary
    (54) postfix -> . primary
    (58) postfix -> . Identifier LParen expression_list RParen
    (80) primary -> . Integer
    (81) primary -> . Identifier
    (82) primary -> . LParen expression RParen

    Identifier      shift and go to state 13
    Minus           shift and go to state 26
    BitNot          shift and go to state 29
    Not             shift and go to state 30
    Integer         shift and go to state 33
    LParen          shift and go to state 32

    expression                     shift and go to state 61
    assignment                     shift and go to state 15
    conditional                    shift and go to state 16
    logical_or                     shift and go to state 17
    logical_and                    shift and go to state 18
    bit_or                         shift and go to state 19
    xor                            shift and go to state 20
    bit_and                        shift and go to state 21
    equality                       shift and go to state 22
    relational                     shift and go to state 23
    additive                       shift and go to state 24
    multiplicative                 shift and go to state 25
    unary                          shift and go to state 27
    postfix                        shift and go to state 28
    primary                        shift and go to state 31

state 33

    (80) primary -> Integer .

    Mul             reduce using rule 80 (primary -> Integer .)
    Div             reduce using rule 80 (primary -> Integer .)
    Mod             reduce using rule 80 (primary -> Integer .)
    Plus            reduce using rule 80 (primary -> Integer .)
    Minus           reduce using rule 80 (primary -> Integer .)
    Less            reduce using rule 80 (primary -> Integer .)
    Greater         reduce using rule 80 (primary -> Integer .)
    LessEqual       reduce using rule 80 (primary -> Integer .)
    GreaterEqual    reduce using rule 80 (primary -> Integer .)
    NotEqual        reduce using rule 80 (primary -> Integer .)
    Equal           reduce using rule 80 (primary -> Integer .)
    BitAnd          reduce using rule 80 (primary -> Integer .)
    Xor             reduce using rule 80 (primary -> Integer .)
    BitOr           reduce using rule 80 (primary -> Integer .)
    And             reduce using rule 80 (primary -> Integer .)
    Question        reduce using rule 80 (primary -> Integer .)
    Or              reduce using rule 80 (primary -> Integer .)
    Semi            reduce using rule 80 (primary -> Integer .)
    RParen          reduce using rule 80 (primary -> Integer .)
    Comma           reduce using rule 80 (primary -> Integer .)
    Colon           reduce using rule 80 (primary -> Integer .)


state 34

    (12) type_identifier_union -> type .
    (13) type_identifier_union -> type . Identifier

    RParen          reduce using rule 12 (type_identifier_union -> type .)
    Comma           reduce using rule 12 (type_identifier_union -> type .)
    Identifier      shift and go to state 62


state 35

    (8) function_def -> type Identifier LParen parameter_list . RParen LBrace block RBrace
    (9) function_decl -> type Identifier LParen parameter_list . RParen Semi
    (10) parameter_list -> parameter_list . Comma type_identifier_union

    RParen          shift and go to state 63
    Comma           shift and go to state 64


state 36

    (11) parameter_list -> type_identifier_union .

    RParen          reduce using rule 11 (parameter_list -> type_identifier_union .)
    Comma           reduce using rule 11 (parameter_list -> type_identifier_union .)


state 37

    (14) parameter_list -> empty .

    RParen          reduce using rule 14 (parameter_list -> empty .)
    Comma           reduce using rule 14 (parameter_list -> empty .)


state 38

    (62) assignment -> Identifier Assign . expression
    (41) expression -> . assignment
    (42) assignment -> . conditional
    (62) assignment -> . Identifier Assign expression
    (43) conditional -> . logical_or
    (79) conditional -> . logical_or Question expression Colon conditional
    (44) logical_or -> . logical_and
    (63) logical_or -> . logical_or Or logical_and
    (45) logical_and -> . bit_or
    (64) logical_and -> . logical_and And bit_or
    (46) bit_or -> . xor
    (65) bit_or -> . bit_or BitOr xor
    (47) xor -> . bit_and
    (66) xor -> . xor Xor bit_and
    (48) bit_and -> . equality
    (67) bit_and -> . bit_and BitAnd equality
    (49) equality -> . relational
    (68) equality -> . equality NotEqual relational
    (69) equality -> . equality Equal relational
    (50) relational -> . additive
    (70) relational -> . relational Less additive
    (71) relational -> . relational Greater additive
    (72) relational -> . relational LessEqual additive
    (73) relational -> . relational GreaterEqual additive
    (51) additive -> . multiplicative
    (74) additive -> . additive Plus multiplicative
    (75) additive -> . additive Minus multiplicative
    (52) multiplicative -> . unary
    (76) multiplicative -> . multiplicative Mul unary
    (77) multiplicative -> . multiplicative Div unary
    (78) multiplicative -> . multiplicative Mod unary
    (53) unary -> . postfix
    (55) unary -> . Minus unary
    (56) unary -> . BitNot unary
    (57) unary -> . Not unary
    (54) postfix -> . primary
    (58) postfix -> . Identifier LParen expression_list RParen
    (80) primary -> . Integer
    (81) primary -> . Identifier
    (82) primary -> . LParen expression RParen

    Identifier      shift and go to state 13
    Minus           shift and go to state 26
    BitNot          shift and go to state 29
    Not             shift and go to state 30
    Integer         shift and go to state 33
    LParen          shift and go to state 32

    expression                     shift and go to state 65
    assignment                     shift and go to state 15
    conditional                    shift and go to state 16
    logical_or                     shift and go to state 17
    logical_and                    shift and go to state 18
    bit_or                         shift and go to state 19
    xor                            shift and go to state 20
    bit_and                        shift and go to state 21
    equality                       shift and go to state 22
    relational                     shift and go to state 23
    additive                       shift and go to state 24
    multiplicative                 shift and go to state 25
    unary                          shift and go to state 27
    postfix                        shift and go to state 28
    primary                        shift and go to state 31

state 39
